RESOLVED FIXED96304
[V8] Constructors try to handle errors that cannot occur
https://bugs.webkit.org/show_bug.cgi?id=96304
Summary [V8] Constructors try to handle errors that cannot occur
Adam Barth
Reported 2012-09-10 12:59:05 PDT
[V8] Constructors try to handle errors that cannot occur
Attachments
Patch (5.85 KB, patch)
2012-09-10 13:01 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-09-10 13:01:00 PDT
Kentaro Hara
Comment 2 2012-09-10 13:02:41 PDT
Comment on attachment 163183 [details] Patch Looks OK
Adam Barth
Comment 3 2012-09-10 13:20:24 PDT
Comment on attachment 163183 [details] Patch Clearing flags on attachment: 163183 Committed r128094: <http://trac.webkit.org/changeset/128094>
Adam Barth
Comment 4 2012-09-10 13:20:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.